kubernetes/Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
  namespace: retail-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ui
  template:
    metadata:
      labels:
        app: ui
    spec:
      containers:
        - name: ui
          image: adaobiudoye/muchtodo-backend:latest
          ports:
            - containerPort: 8080
